apps/jellyfin/01-namespace-and-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    name: jellyfin
